--- a/.github/workflows/reusable-chachalog-comment-pr.yml
+++ b/.github/workflows/reusable-chachalog-comment-pr.yml
@@ -5,7 +5,7 @@ on:
 
 jobs:
   comment-pr:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-slim
     permissions:
       contents: read
       pull-requests: write
@@ -13,21 +13,21 @@ jobs:
       - uses: actions/checkout@v6
         with:
           fetch-depth: 1
-          token: ${{ github.token }}      
+          token: ${{ github.token }}
 
       - name: Is repo whitelisted?
         id: wl
-        uses: jahia/jahia-modules-action/chachalog-is-whitelisted@default-chachalog-config
+        uses: jahia/jahia-modules-action/chachalog-is-whitelistedv2
         with:
           repository: ${{ github.repository }}
 
       # If the repo does not contain a Chachalog config, this action
-      # handles the creation of a default configuration, that should be 
+      # handles the creation of a default configuration, that should be
       # sufficient to get started
-      - uses: jahia/jahia-modules-action/chachalog-default-config@default-chachalog-config
-        if: ${{ steps.wl.outputs.whitelisted != 'true' }}      
+      - uses: jahia/jahia-modules-action/chachalog-default-config@v2
+        if: ${{ steps.wl.outputs.whitelisted != 'true' }}
 
-      - run: npx chachalog@^0.4.4 comment-pr
-        if: ${{ steps.wl.outputs.whitelisted != 'true' }}      
+      - run: npx chachalog@^0.5 comment-pr
+        if: ${{ steps.wl.outputs.whitelisted != 'true' }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
