--- a/.github/workflows/reusable-integration-tests.yml
+++ b/.github/workflows/reusable-integration-tests.yml
@@ -72,7 +72,7 @@ on:
         type: string
         description: 'Folder containing the docker-compose.yml'
         required: false
-        default: 'tests/'        
+        default: 'tests/'
       test_report_name:
         type: string
         default: "Tests Report"
@@ -93,6 +93,10 @@ on:
         type: string
         default: "docker-compose.yml"
         description: "Location of the Docker Compose configuration file to use, relative to the ./tests/ folder."
+      docker_build_cache_enabled:
+        type: boolean
+        default: false
+        description: "Enable Docker build cache using GitHub Actions cache to speed up Docker image builds"
 
 jobs:
   integration-tests:
@@ -106,6 +110,9 @@ jobs:
       - uses: KengoTODA/actions-setup-docker-compose@main
         with:
           version: "1.29.2"
+      - name: Set up Docker Buildx
+        if: ${{ inputs.docker_build_cache_enabled }}
+        uses: docker/setup-buildx-action@v3
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
@@ -116,6 +123,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.module_branch }}
+      # The checksum is used as the scope for the GitHub Actions cache.
+      # This ensures that when there is a change in the tests/ directory of the module, a different cache entry will be used.
+      - name: Calculate tests directory checksum
+        id: tests-dir-checksum
+        run: |
+          CHECKSUM=$(find "${{ inputs.tests_path }}" -type f -exec sha256sum {} \; | sort | sha256sum | cut -d' ' -f1)
+          echo "checksum=$CHECKSUM" >> $GITHUB_OUTPUT
+          echo "Tests directory checksum: $CHECKSUM"
       - uses: jahia/jahia-modules-action/integration-tests@v2
         with:
           module_id: ${{ inputs.module_id }}
@@ -163,6 +178,8 @@ jobs:
           zencrepes_secret: ${{ secrets.ZENCREPES_WEBHOOK_SECRET }}
           catalina_context: ${{ inputs.catalina_context }}
           docker_compose_file: ${{ inputs.docker_compose_file }}
+          docker_build_cache_enabled: ${{ inputs.docker_build_cache_enabled }}
+          docker_build_cache_scope: ${{ github.repository }}/${{ steps.tests-dir-checksum.outputs.checksum }}
 
       - name: Test Report
         uses: dorny/test-reporter@v2.3.0
