--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -280,6 +280,14 @@ inputs:
   catalina_context:
     default: ''
     description: "Context path to use for the catalina server (e.g. 'my-context'). Use an empty string for root context (default)."
+  docker_build_cache_enabled:
+    default: 'false'
+    description: 'Enable Docker layer caching using GitHub Actions cache'
+    required: false
+  docker_build_cache_scope:
+    default: ''
+    description: 'Scope for the Docker build cache (useful for isolating cache per branch/workflow)'
+    required: false
 runs:
   using: 'node20'
   main: 'dist/index.js'
