--- a/delivery/check-changelog/action.yml
+++ b/delivery/check-changelog/action.yml
@@ -8,9 +8,6 @@ inputs:
   no-changelog-label:
     description: The name of the "no-changelog" label, indicating that a changelog is not expected in this PR
     default: '🗒️ no-changelog'
-  repository-whitelist:
-    description: A list of repositories allowed to skip changelog updates
-    default: '[]'
 
 runs:
   using: composite
@@ -23,19 +20,16 @@ runs:
           const labels = context.payload.pull_request.labels.map(label => label.name);
           return labels.includes("${{ inputs.no-changelog-label }}");
 
-    - name: Check if repository is in repository-whitelist
-      id: check-repo-whitelist
+    - name: Is repo whitelisted?
+      id: wl
       if: steps.check-no-changelog.outputs.result == 'false'
-      uses: actions/github-script@v8
+      uses: jahia/jahia-modules-action/chachalog-is-whitelisted@v2
       with:
-        script: |
-          const repo = context.payload.repository.full_name;
-          const whitelist = ${{ inputs.repository-whitelist }};
-          return whitelist.includes(repo);
+        repository: ${{ github.repository }}
 
     - name: Check if changelog has been updated in the PR
-      if: steps.check-no-changelog.outputs.result == 'false' && steps.check-repo-whitelist.outputs.result == 'false'
-      uses: actions/github-script@v7
+      if: steps.check-no-changelog.outputs.result == 'false' && steps.wl.outputs.whitelisted == 'false'
+      uses: actions/github-script@v8
       id: check-changelog-updated
       with:
         script: |
