--- a/delivery/check-changelog/action.yml
+++ b/delivery/check-changelog/action.yml
@@ -28,7 +28,7 @@ runs:
         repository: ${{ github.repository }}
 
     - name: Check if changelog has been updated in the PR
-      if: steps.check-no-changelog.outputs.result == 'false' && steps.wl.outputs.whitelisted == 'false'
+      if: steps.check-no-changelog.outputs.result == 'false' && steps.check-repo-whitelist.outputs.whitelisted == 'false'
       uses: actions/github-script@v8
       id: check-changelog-updated
       with:
@@ -49,8 +49,8 @@ runs:
           return false;
 
     - name: Fail if checks failed
-      if: steps.check-no-changelog.outputs.result == 'false' && steps.check-repo-whitelist.outputs.result == 'false' && steps.check-changelog-updated.outputs.result == 'false'
-      uses: actions/github-script@v7
+      if: steps.check-no-changelog.outputs.result == 'false' && steps.check-repo-whitelist.outputs.whitelisted == 'false' && steps.check-changelog-updated.outputs.result == 'false'
+      uses: actions/github-script@v8
       with:
         script: |
           const message = "Changelog has not been updated. Please update the changelog or add the '🗒️ no-changelog' label to skip this check.";
