--- a/.github/workflows/reusable-integration-tests.yml
+++ b/.github/workflows/reusable-integration-tests.yml
@@ -110,9 +110,9 @@ jobs:
       - uses: KengoTODA/actions-setup-docker-compose@main
         with:
           version: "1.29.2"
-      - name: Set up Docker Buildx
-        if: ${{ inputs.docker_build_cache_enabled }}
-        uses: docker/setup-buildx-action@v3
+#      - name: Set up Docker Buildx
+#        if: ${{ inputs.docker_build_cache_enabled }}
+#        uses: docker/setup-buildx-action@v3
       - uses: actions/setup-node@v4
         with:
           node-version: "lts/*"
@@ -123,14 +123,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.module_branch }}
-      # The checksum is used as the scope for the GitHub Actions cache.
-      # This ensures that when there is a change in the tests/ directory of the module, a different cache entry will be used.
-      - name: Calculate tests directory checksum
-        id: tests-dir-checksum
-        run: |
-          CHECKSUM=$(find "${{ inputs.tests_path }}" -type f -exec sha256sum {} \; | sort | sha256sum | cut -d' ' -f1)
-          echo "checksum=$CHECKSUM" >> $GITHUB_OUTPUT
-          echo "Tests directory checksum: $CHECKSUM"
       - uses: jahia/jahia-modules-action/integration-tests@use-cache-for-integration-tests-TEMP_FOR_TESTING
         with:
           module_id: ${{ inputs.module_id }}
@@ -179,7 +171,8 @@ jobs:
           catalina_context: ${{ inputs.catalina_context }}
           docker_compose_file: ${{ inputs.docker_compose_file }}
           docker_build_cache_enabled: ${{ inputs.docker_build_cache_enabled }}
-          docker_build_cache_scope: ${{ github.repository }}/${{ steps.tests-dir-checksum.outputs.checksum }}
+          # the cache will be shared by all workflows using this reusable workflow in a given repository
+          docker_build_cache_scope: "integration-tests"
 
       - name: Test Report
         uses: dorny/test-reporter@v2.3.0
